--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Prod 1 - Rilakkuma Store</title>
+        <title>Rilakkuma Store</title>
 
-        <link rel="stylesheet" href="stylesheets/metro-bootstrap.css">
-        <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
-        <link rel="stylesheet" href="stylesheets/style.css">
+        <link rel="stylesheet" href="/css/metro-bootstrap.css">
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <header id="store-nav" class="navbar navbar-default container">
@@ -51,38 +51,19 @@
                 <!-- categories -->
                 <section class="col-sm-2">
                     <ul id="category-list" class="nav nav-pills nav-stacked">
-                        <li><a href="#">All</a></li>
-                        <li class="active"><a href="#">Rilakkuma</a></li>
-                        <li><a href="#">Korilakkuma</a></li>
-                        <li><a href="#">Kiiroitori</a></li>
+                        <li><a href="/">All</a></li>
+                        <li><a href="/catalog/rilakkuma">Rilakkuma</a></li>
+                        <li><a href="/catalog/korilakkuma">Korilakkuma</a></li>
+                        <li><a href="/catalog/kiiroitori">Kiiroitori</a></li>
                     </ul>
                 </section>
 
-                <!-- products -->
-                <section class="col-sm-10">
-                    <ol id="navigation-menu" class="breadcrumb">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">Rilakkuma</a></li>
-                        <li class="active">Prod 1</li>
-                    </ol>
-
-                    <section class="product-detail-image">
-                        <img src="images/products/RLK3167_L.jpg" />
-                    </section>
-                    <section class="product-detail-description">
-                        <h2>Prod 1</h2>
-                        <h4>
-                            $33.3
-                            <button type="button" class="btn btn-sm btn-primary" name="addToCart">Add</button>
-                        </h4>
-                        <article>Some more descriptions here...</article>
-                    </section>
-                </section>
+                {{{body}}}
             </div>
         </div>
 
         <!-- javascript libraries -->
-        <script src="javascripts/lib/jquery-2.1.3.min.js"></script>
-        <script src="javascripts/lib/bootstrap.min.js"></script>
+        <script src="/lib/jquery-2.1.3.min.js"></script>
+        <script src="/lib/bootstrap.min.js"></script>
     </body>
 </html>
