--- a/views/admin-categories.handlebars
+++ b/views/admin-categories.handlebars
@@ -2,6 +2,7 @@
 <div id="add-category" class="row">
     <div class="col-md-3 col-md-push-7 message"></div>
     <div class="col-md-7 col-md-pull-3">
+        <!-- new category form -->
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">New Category</h3>
