--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,30 +15,10 @@
             <section id="cart">
                 <p id="cart-summary">
                     <span class="fa fa-shopping-cart"></span> Shopping List
-                    <span class="cart-total">(Total:&nbsp;</span><span class="fa fa-usd"></span><span id="cart-amount">33.3</span><span class="cart-total">)</span>
+                    <span class="cart-total">(Total:&nbsp;</span><span class="fa fa-usd"></span><span id="cart-amount"></span><span class="cart-total">)</span>
                 </p>
                 <div id="cart-detail">
-                    <table class="table">
-                        <tr>
-                            <td class="cart-name">Prod 1</td>
-                            <td class="cart-qty">
-                                <div class="input-group">
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn-sm" data-type="minus">
-                                            <span class="fa fa-minus"></span>
-                                        </button>
-                                    </span>
-                                    <input type="text" class="form-control" value="1" min="0">
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn-sm" data-type="plus">
-                                            <span class="fa fa-plus"></span>
-                                        </button>
-                                    </span>
-                                </div>
-                            </td>
-                            <td><span class="fa fa-at"></span>$33.3</td>
-                        </tr>
-                    </table>
+                    <div id="cart-product-list"></div>
                     <button type="button" class="btn btn-success cart-checkout">
                         <span class="fa fa-sign-out"></span> Checkout
                     </button>
@@ -46,24 +26,40 @@
             </section>
         </header>
 
-        <div class="container">
-            <div class="row">
-                <!-- categories -->
-                <section class="col-sm-2">
-                    <ul id="category-list" class="nav nav-pills nav-stacked">
-                        <li><a href="/">All</a></li>
-                        <li><a href="/catalog/rilakkuma">Rilakkuma</a></li>
-                        <li><a href="/catalog/korilakkuma">Korilakkuma</a></li>
-                        <li><a href="/catalog/kiiroitori">Kiiroitori</a></li>
-                    </ul>
-                </section>
+        <div id="page-body" class="container">{{{body}}}</div>
 
-                {{{body}}}
-            </div>
-        </div>
+        <script id="cart-detail-tpl" type="text/x-handlebars-template">
+            <table class="table">
+                \{{#each products}}
+                <tr>
+                    <td class="cart-name"><a href="/\{{catid}}/\{{pid}}" class="xhr-enable">\{{name}}</a></td>
+                    <td class="cart-qty" data-pid="\{{pid}}">
+                        <div class="input-group">
+                            <span class="input-group-btn">
+                                <button type="button" class="btn btn-sm cart-minus" data-type="minus">
+                                    <span class="fa fa-minus"></span>
+                                </button>
+                            </span>
+                            <input type="text" class="form-control" value="\{{qty}}" min="0">
+                            <span class="input-group-btn">
+                                <button type="button" class="btn btn-sm cart-plus" data-type="plus">
+                                    <span class="fa fa-plus"></span>
+                                </button>
+                            </span>
+                        </div>
+                    </td>
+                    <td><span class="fa fa-at"></span>$\{{price}}</td>
+                </tr>
+                \{{/each}}
+            </table>
+        </script>
 
         <!-- javascript libraries -->
         <script src="/lib/jquery-2.1.3.min.js"></script>
         <script src="/lib/bootstrap.min.js"></script>
+        <script src="/lib/handlebars-v3.0.0.js"></script>
+        <script src="/lib/URI.js"></script>
+        <script src="/lib/ui.frontend.js"></script>
+        <script src="/lib/ui.cart.js"></script>
     </body>
 </html>
