--- a/views/admin-products.handlebars
+++ b/views/admin-products.handlebars
@@ -84,7 +84,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="add-product-description">Description</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" name="description" pattern="^[\w- ',\r\n]+$"></textarea>
+                        <textarea class="form-control" id="add-product-description" name="description" pattern="^[\w- ',\r\n]+$"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
@@ -136,7 +136,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="edit-product-description">Description</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" name="description" pattern="^[\w- ',\r\n]+$">\{{description}}</textarea>
+                        <textarea class="form-control" id="edit-product-description" name="description" pattern="^[\w- ',\r\n]+$">\{{description}}</textarea>
                     </div>
                 </div>
                 <div class="form-group">
