Use Handlebars instead of Mustache as templating engine in backend

--- a/views/admin-categories.handlebars
+++ b/views/admin-categories.handlebars
@@ -78,14 +78,14 @@
     </div>
 </div>
 
-<script id="category-list-tpl" type="x-tmpl-mustache">
+<script id="category-list-tpl" type="text/x-handlebars-template">
     <option value="">Please select a category</option>
     \{{#categories}}
     <option value="\{{catid}}">\{{name}}</option>
     \{{/categories}}
 </script>
 
-<script id="warn-invalid-form-tpl" type="x-tmpl-mustache">
+<script id="warn-invalid-form-tpl" type="text/x-handlebars-template">
 <p>The following fields are invalid:</p>
 <ul>
     \{{#fields}}
@@ -94,14 +94,14 @@
 </ul>
 </script>
 
-<script id="success-message-tpl" type="x-tmpl-mustache">
+<script id="success-message-tpl" type="text/x-handlebars-template">
     <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         \{{message}}
     </div>
 </script>
 
-<script id="error-message-tpl" type="x-tmpl-mustache">
+<script id="error-message-tpl" type="text/x-handlebars-template">
     <div class="alert alert-danger alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         \{{{message}}}
