--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -29,7 +29,9 @@
         <!-- javascript libraries -->
         <script src="/lib/jquery-2.1.3.min.js"></script>
         <script src="/lib/bootstrap.min.js"></script>
-        <script src="/lib/mustache.js"></script>
+        <script src="/lib/handlebars-v3.0.0.js"></script>
+        <script src="/lib/xss-filters.1.0.6.min.js"></script>
+        <script src="/lib/secure-handlebars-helpers.min.1.0.4.js"></script>
         <script src="/lib/ui.csrf.js"></script>
         {{#each uiScripts}}
         <script src="/lib/{{this}}"></script>
