--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,6 +25,9 @@
                     </button>
                 </div>
             </section>
+            <section id="my-account">
+                <span class="fa fa-user"></span> My Account
+            </section>
         </header>
 
         <div id="page-body" class="container">{{{body}}}</div>
