--- a/views/checkout-thankyou.handlebars
+++ b/views/checkout-thankyou.handlebars
@@ -1,9 +1,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1 class="text-success">Thank you.</h1>
-            <h3 class="text-warning">Please see your order details below.</h3>
-
+            <h1 class="text-success">Thank you for your order.</h1>
+            <h3 class="text-warning">The payment of {{orderCurrency}} {{orderAmount}} has been received. We will proceed your order as soon as possible.</h3>
 
             <h3>You may want to:</h3>
             <a href="/account" class="btn btn-primary">Manage your Account</a>
