--- a/views/layouts/checkout.handlebars
+++ b/views/layouts/checkout.handlebars
@@ -18,6 +18,7 @@
         <!-- javascript libraries -->
         <script src="/lib/jquery-2.1.3.min.js"></script>
         <script src="/lib/bootstrap.min.js"></script>
+        <script src="/lib/URI.js"></script>
         <script src="/lib/ui.checkout.js"></script>
     </body>
 </html>
