Show order details if paymentId is clicked in /account page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -147,3 +147,11 @@ td.order-item-payment {
 td.order-item-payment:hover {
     text-decoration: underline;
 }
+
+tr.order-items img {
+    max-width: 160px;
+    max-height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
