--- a/views/layouts/account.handlebars
+++ b/views/layouts/account.handlebars
@@ -33,6 +33,7 @@
         <script src="/lib/handlebars-v3.0.0.js"></script>
         <script src="/lib/xss-filters.1.0.6.min.js"></script>
         <script src="/lib/secure-handlebars-helpers.min.1.0.4.js"></script>
+        <script src="/lib/moment.min.js"></script>
         <script src="/lib/ui.csrf.js"></script>
         {{#each uiScripts}}
         <script src="/lib/{{this}}"></script>
