--- a/views/admin-products.handlebars
+++ b/views/admin-products.handlebars
@@ -255,9 +255,16 @@
 </script>
 
 <script id="success-message-tpl" type="text/x-handlebars-template">
+    {{!-- before context-parser-handlebars:
     <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         \{{message}}
+    </div>
+    --}}
+
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        \{{{yd message}}}
     </div>
 </script>
 
