--- a/views/admin-products.handlebars
+++ b/views/admin-products.handlebars
@@ -49,7 +49,7 @@
     </div>
     \{{#products}}
         <div class="panel-body" data-pid="\{{pid}}">
-            <img src="/images/products/\{{pid}}.\{{image_extension}}" class="img-thumbnail pull-left" />
+            <img src="\{{s3_image_path}}" class="img-thumbnail pull-left" />
             <h4>\{{name}}</h4>
             <h5>$\{{price}}</h5>
         </div>
@@ -61,7 +61,7 @@
     </div>
     \{{#products}}
         <div class="panel-body" data-pid="\{{{yavd pid}}}">
-            <img src="/images/products/\{{{yavd (yu pid)}}}.\{{{yavd (yu image_extension)}}}" class="img-thumbnail pull-left" />
+            <img src="\{{{yavd (yu s3_image_path)}}}" class="img-thumbnail pull-left" />
             <h4>\{{{yd name}}}</h4>
             <h5>$\{{{yd price}}}</h5>
         </div>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="col-sm-5">
                         <h5>Current:</h5>
-                        <img src="/images/products/\{{pid}}.\{{image_extension}}" class="img-thumbnail" />
+                        <img src="\{{s3_image_path}}" class="img-thumbnail" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -222,7 +222,7 @@
                     </div>
                     <div class="col-sm-5">
                         <h5>Current:</h5>
-                        <img src="/images/products/\{{{yavd (yu pid)}}}.\{{{yavd (yu image_extension)}}}" class="img-thumbnail" />
+                        <img src="\{{{yavd (yu s3_image_path)}}}" class="img-thumbnail" />
                     </div>
                 </div>
                 <div class="form-group">
