--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
             <table class="table">
                 \{{#each products}}
                 <tr>
-                    <td class="cart-name"><a href="/\{{catid}}/\{{pid}}" class="xhr-enable">\{{name}}</a></td>
+                    <td class="cart-name"><a href="/\{{catid}}-\{{catslug}}/\{{pid}}-\{{slug}}" class="xhr-enable">\{{name}}</a></td>
                     <td class="cart-qty" data-pid="\{{pid}}">
                         <div class="input-group">
                             <span class="input-group-btn">
@@ -62,7 +62,7 @@
             <table class="table">
                 \{{#each products}}
                 <tr>
-                    <td class="cart-name"><a href="/\{{{yavd (yu catid)}}}/\{{{yavd (yu pid)}}}" class="xhr-enable">\{{{yd name}}}</a></td>
+                    <td class="cart-name"><a href="/\{{{yavd (yu catid)}}}-\{{{yavd (yu catslug)}}}/\{{{yavd (yu pid)}}}-\{{{yavd (yu slug)}}}" class="xhr-enable">\{{{yd name}}}</a></td>
                     <td class="cart-qty" data-pid="\{{{yavd pid}}}">
                         <div class="input-group">
                             <span class="input-group-btn">
