--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -17,6 +17,7 @@
                 <li role="presentation" {{#equal adminSection 'categories'}}class="active"{{/equal}}><a href="/admin/categories">Categories</a></li>
                 <li role="presentation" {{#equal adminSection 'products'}}class="active"{{/equal}}><a href="/admin/products">Products</a></li>
                 <li role="presentation" class="pull-right"><a href="/account/logout" class="text-danger">Sign Out</a></li>
+                <li role="presentation" {{#equal adminSection 'newpassword'}}class="active pull-right"{{/equal}} class="pull-right"><a href="/admin/newpassword" class="text-warning">Change Password</a></li>
             </ul>
 
             {{{body}}}
