--- a/views/account-create.handlebars
+++ b/views/account-create.handlebars
@@ -26,6 +26,7 @@
                             <input type="password" class="form-control" id="confirm-password" placeholder="" required pattern="^.{8,}$" />
                         </div>
                     </div>
+                    <div class="col-sm-12 text-center" id="captcha"></div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <button type="button" class="btn btn-warning">Submit</button>
